--- a/src/pug/components/_nav.pug
+++ b/src/pug/components/_nav.pug
@@ -10,7 +10,7 @@ nav(id="mainNav")
             span Hlavice, ráčny a příslušenství pro ruční použití 
             img(src="/img/icons/cheveron-right.svg" alt="Rozbalit")
             
-        .nav-link(id="subToggle-0") Hlavice, ráčny a příslušenství pro ruční použití #[img(src="/img/icons/cheveron.svg" alt="Rozbalit")]
+        .nav-link(id="subToggle-0") #[img(src="/img/nav-img.svg" alt="...")] Hlavice, ráčny a příslušenství pro ruční použití #[img(src="/img/icons/cheveron.svg" alt="Rozbalit")]
         .nav-submenu(id="sub-0")
             .nav-submenu__single.--all
                 a(href="/produkt-vypis.html").nav-submenu__title Zobrazit vše
@@ -35,7 +35,7 @@ nav(id="mainNav")
             img(src="/img/nav-img.svg" alt="...")
             span Hlavice, ráčny a příslušenství
             img(src="/img/icons/cheveron-right.svg" alt="Rozbalit")
-        .nav-link(id="subToggle-1") Hlavice a příslušenství pro rázové utahováky #[img(src="/img/icons/cheveron.svg" alt="Rozbalit")]
+        .nav-link(id="subToggle-1") #[img(src="/img/nav-img.svg" alt="...")] Hlavice a příslušenství pro rázové utahováky #[img(src="/img/icons/cheveron.svg" alt="Rozbalit")]
         .nav-submenu(id="sub-1")
             .container
                 .row 
@@ -61,7 +61,7 @@ nav(id="mainNav")
             img(src="/img/nav-img.svg" alt="...")
             span Hlavice, ráčny a příslušenství pro ruční použití 
             img(src="/img/icons/cheveron-right.svg" alt="Rozbalit")
-        .nav-link(id="subToggle-2") Noční stolky #[img(src="/img/icons/cheveron.svg" alt="Rozbalit")]
+        .nav-link(id="subToggle-2") #[img(src="/img/nav-img.svg" alt="...")] Noční stolky #[img(src="/img/icons/cheveron.svg" alt="Rozbalit")]
         .nav-submenu(id="sub-2")
             .container
                 .row 
@@ -84,7 +84,7 @@ nav(id="mainNav")
             img(src="/img/nav-img.svg" alt="...")
             span Hlavice, ráčny a příslušenství pro ruční použití 
             img(src="/img/icons/cheveron-right.svg" alt="Rozbalit")   
-        .nav-link(id="subToggle-3") Dřevěné krabičky #[img(src="/img/icons/cheveron.svg" alt="Rozbalit" )]
+        .nav-link(id="subToggle-3") #[img(src="/img/nav-img.svg" alt="...")] Dřevěné krabičky #[img(src="/img/icons/cheveron.svg" alt="Rozbalit" )]
         .nav-submenu(id="sub-3")
             .container
                 .row 
