--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,7 +5,9 @@ html(lang=lang)
     include template/_head.pug  
 
     body
+    
         include components/_modal-login.pug
+        include components/_modal-enquiry.pug
 
         include components/_header.pug
 
