--- a/src/pug/kosik-3.pug
+++ b/src/pug/kosik-3.pug
@@ -35,151 +35,94 @@ html(lang=lang)
 
                             form.cart-content__form(method="post" id="cart-form-user")
 
-                                .cart-table__title Vyplňte osobní údaje
+                                .cart-table__title Fakturační údaje
                                 .cart-table-personal
-                                    
-                                    .form-group     
-                                        label(for="cart-name") Jméno
-                                        input(type="text" id="cart-name" name="cart-name" required)
-                                    .form-group     
-                                        label(for="cart-surname") Příjmení
-                                        input(type="text" id="cart-surname" name="cart-surname" required)
-                                    .form-group     
-                                        label(for="cart-email") Email
-                                        | <input type="email" id="cart-email" name="cart-email" required minlength="6" maxlength="255" pattern="([0-9a-zA-Z]([-.\w]*[0-9a-zA-Z])*@([0-9a-zA-Z][-\w]*[0-9a-zA-Z]\.)+[a-zA-Z]{2,9})">
-                                    .form-group     
-                                        label(for="cart-tel") Telefon
-                                        | <input type="tel" id="cart-tel" name="cart-tel" required value="" pattern="\d{1,15}">
-
-                                    .form-subtitle Dodací údaje
-
-                                    .form-group     
-                                        label(for="cart-street") Ulice
-                                        input(type="text" id="cart-street" name="cart-street" required)
-                                    .form-group     
-                                        label(for="cart-street-n") Číslo popisné
-                                        input(type="text" id="cart-street-n" name="cart-street-n" required)
-                                    .form-group     
-                                        label(for="cart-city") Město/obec
-                                        input(type="text" id="cart-city" name="cart-city" required)      
-                                    .form-group     
-                                        label(for="cart-psc") PSČ
-                                        input(type="text" id="cart-psc" name="cart-psc" required)      
-                                    .form-group     
-                                        label(for="cart-state") Stát
-                                        select(name="cart-state" id="cart-state" required)   
-                                            option(value="cz") Česká republika
-                                            option(value="sk") Slovensko
 
 
-                                    .form-spacer 
+                                .cart-table__title Doručovací údaje
+                                .cart-table-personal
 
+                                    form(action="" method="post")
+                                        .form-group.--inline  
+                                            select(name="user-info" id="user-info")   
+                                                option(value="cz") Adresa Česká republika
+                                                option(value="sk") Adresa Slovensko
+                                            button.btn.btn-secondary Vypsat adresu
 
-                                    .form-group.--checkbox
-                                        label(for="cart-fa-address" id="faToggle") Vyplnit fakturační adresu #[span (pokud je rozdílná od dodací adresy nebo nakupuji na firmu)]
-                                        input(type="checkbox" name="cart-fa-address" id="cart-fa-address")
-
-                                        .form-collapse
-
-
-                                            .form-group     
-                                                label(for="cart-fa-name") Jméno a příjmení
-                                                input(type="text" id="cart-fa-name" name="cart-fa-name")
-
-                                            .form-group.--checkbox
-                                                label(for="cart-fa-company" id="faComToggle") Jsme firma a potřebujeme uvést také obchodní informace
-                                                input(type="checkbox" name="cart-fa-address" id="cart-fa-company")
-
-                                                .form-collapse
-
-                                                    .form-group     
-                                                        label(for="fakturacni_jmeno") Název firmy
-                                                        input(type="text" id="fakturacni_jmeno" name="fakturacni_jmeno")
-
-                                                    .form-group     
-                                                        label(for="cart-fa-ico") IČO
-                                                        input(type="text" id="cart-fa-ico" name="cart-fa-ico")
-                                                        
-                                                    .form-group     
-                                                        label(for="dic") DIČ
-                                                        input(type="text" id="dic" name="dic")
-
-
-                                            .form-group     
-                                                label(for="cart-fa-street") Ulice
-                                                input(type="text" id="cart-fa-street" name="cart-fa-street" )
-                                            .form-group     
-                                                label(for="cart-fa-street-n") Číslo popisné
-                                                input(type="text" id="cart-fa-street-n" name="cart-fa-street-n" )
-                                            .form-group     
-                                                label(for="cart-fa-city") Město/obec
-                                                input(type="text" id="cart-fa-city" name="cart-fa-city" )
-                                            .form-group     
-                                                label(for="cart-fa-psc") PSČ
-                                                input(type="text" id="cart-fa-psc" name="cart-fa-psc" )
-                                            .form-group     
-                                                label(for="cart-fa-state") Stát
-                                                select(name="cart-fa-state" id="cart-fa-state" )   
-                                                    option(value="cz") Česká republika
-                                                    option(value="sk") Slovensko
-
-
-
-
-
-                                    .form-spacer 
-
-
-                                    .form-group.--checkbox
-                                        label(for="cart-register" id="regToggle") S těmito údaji se chci zaregistrovat
-                                        input(type="checkbox" name="cart-register" id="cart-register")
-
-                                        .form-collapse
-
-                                            .form-group     
-                                                label(for="cart-register-password") Heslo 
-                                                | <input type="password" id="cart-register-password" name="cart-register-password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d\w\W]{8,}$" disabled>
-                                                span.show-password(id="showCartRegisterPassword" aria-label="Zobrazit heslo")
-                                                span.label-subtext (Minimum 8 znaků, musí obsahovat velké a malé písmena a alespoň 1 číslo)
-    
-
-                                    .form-spacer 
-
-                                    .form-group
-                                        label Vložením údajů beru na vědomí #[a(data-micromodal-trigger="modal-personal") zpracování osobních údajů]
-                        
-
-                                    .form-group.--checkbox
-                                        label(for="register-agree1") Chci odebírat newsletter a souhlasím se #[a(data-micromodal-trigger="modal-personal") zpracováním osobních údajů] za účelem zasílání informací o novinkách a slevách.
-                                        input(type="checkbox" name="register-agree1" id="register-agree1")
-
-
-
-
-
-
-                                .cart-table__footer
-                                    a.cart-table__footer-link(href="/") 
-                                        .cart-table__footer-icon
-                                            img(src="/img/icons/cheveron.svg" alt="Krok zpět")
-                                        .cart-table__footer-text Krok zpět
-
+                                        .cart-table-address
+                                            table 
+                                                tr 
+                                                    td Jméno
+                                                    td test
+                                                tr 
+                                                    td Příjmení
+                                                    td test
+                                                tr 
+                                                    td Jméno
+                                                    td test     
+                                                tr 
+                                                    td Jméno
+                                                    td test
+                                                tr 
+                                                    td Jméno
+                                                    td test
+                                                tr 
+                                                    td Příjmení
+                                                    td test
+                                                tr 
+                                                    td Jméno
+                                                    td test     
+                                                tr 
+                                                    td Jméno
+                                                    td test               
 
 
 
                     
                         aside.cart-aside
-                            .cart-aside__title Shrnutí objednávky
+                            .cart-aside__title Rekapitulace objednávky
                             .cart-aside__table 
-                                .cart-aside__row 
-                                    .cart-aside__table-th Cena zboží
-                                    .cart-aside__table-td 3 299 Kč
-                                .cart-aside__row 
-                                    .cart-aside__table-th Doprava a platba
-                                    .cart-aside__table-td Nevybráno
-                                .cart-aside__row.--main 
-                                    .cart-aside__table-th Celková cena
-                                    .cart-aside__table-td 3 354 Kč #[small 2 830 Kč bez DPH]
+
+                                .cart-aside__item 
+                                    .cart-aside__item-img 
+                                        img(src="/img/product-thumb-large.jpg" alt="#")
+                                    .cart-aside__item-content   
+                                        .cart-aside__item-name 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
+                                        .cart-aside__item-prices 
+                                            span Počet kusů: 1
+                                            span 1 118 Kč
+                                .cart-aside__item 
+                                    .cart-aside__item-img 
+                                        img(src="/img/product-thumb-large.jpg" alt="#")
+                                    .cart-aside__item-content   
+                                        .cart-aside__item-name 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
+                                        .cart-aside__item-prices 
+                                            span Počet kusů: 1
+                                            span 1 118 Kč
+
+                                .cart-aside__weight Celková hmotnost: 25 kg
+
+                                .cart-aside__delivery
+                                
+                                    .cart-aside__row 
+                                        .cart-aside__table-th Cena zboží
+                                        .cart-aside__table-td #[span(id="goodsprice") 32,99] Kč
+
+                                    .cart-aside__row 
+                                        .cart-aside__table-th Doprava a platba
+                                        .cart-aside__table-td #[span(id="delprice") 33,2] Kč
+
+                                .cart-aside__row.--main
+
+                                    .cart-aside__table-row 
+                                        .cart-aside__table-th Celkem bez DPH
+                                        .cart-aside__table-td 
+                                            div #[span(id="sumprice") 329,9] Kč 
+
+                                    .cart-aside__table-row 
+                                        .cart-aside__table-th Cena včetně DPH
+                                        .cart-aside__table-td 
+                                            div #[span(id="vatsumprice") 329,9] Kč 
 
 
                             .cart-aside__free-shipping Nakupte ještě za 6 237 Kč a máte dopravu zdarma
