--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -1,16 +1,4 @@
 header
-    .header-top
-        .container 
-            .header-top__tel 
-                small Máte dotaz?
-                img(src="/img/icons/phone.svg" alt="+420 605 337")
-                span +420 605 337 238 
-                small (po–pá 7:30 – 14:30)
-            .header-top__links
-                a(href="/o-nakupu.html") Vše o nákupu
-                a(href="/txt.html") Doprava
-                a(href="/kontakty.html") Kontakty
-
 
     .header-main  
         .container 
@@ -35,18 +23,22 @@ header
 
             .header-nav
 
+                a.header-nav__link(href="#") O nás
+                a.header-nav__link(href="#") Kontakty
+
+                .header-nav__dropdown(data-micromodal-trigger="modal-enquiry") Poptávka
+
 
                 .user(data-micromodal-trigger="modal-login")
                     .user__icon
                         img(src="/img/icons/user.svg" alt="Přihlášení")
-                    div.user__title Přihlášení
+                    div.user__title
 
                 //   
                     .user.--active(id="userToggle")
                         .user__icon
                             img(src="/img/icons/user.svg" alt="Přihlášení")
                         .user__wrap
-                            .user__text Přihlášen jako
                             .user__title Petr Novák
                         .user__dropdown(id="userDropdown")
                             a(href="/uzivatelsky-ucet.html") Uživatelský účet
