--- a/src/pug/kosik-2.pug
+++ b/src/pug/kosik-2.pug
@@ -104,28 +104,32 @@ html(lang=lang)
 
                                 .cart-aside__item 
                                     .cart-aside__item-img 
+                                        img(src="/img/product-thumb-large.jpg" alt="#")
                                     .cart-aside__item-content   
                                         .cart-aside__item-name 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
                                         .cart-aside__item-prices 
-                                            span počet kusů: 1
+                                            span Počet kusů: 1
                                             span 1 118 Kč
                                 .cart-aside__item 
                                     .cart-aside__item-img 
+                                        img(src="/img/product-thumb-large.jpg" alt="#")
                                     .cart-aside__item-content   
                                         .cart-aside__item-name 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
                                         .cart-aside__item-prices 
-                                            span počet kusů: 1
+                                            span Počet kusů: 1
                                             span 1 118 Kč
 
                                 .cart-aside__weight Celková hmotnost: 25 kg
 
-                                .cart-aside__row 
-                                    .cart-aside__table-th Cena zboží
-                                    .cart-aside__table-td #[span(id="goodsprice") 32,99] Kč
+                                .cart-aside__delivery
+                                
+                                    .cart-aside__row 
+                                        .cart-aside__table-th Cena zboží
+                                        .cart-aside__table-td #[span(id="goodsprice") 32,99] Kč
 
-                                .cart-aside__row 
-                                    .cart-aside__table-th Doprava a platba
-                                    .cart-aside__table-td #[span(id="delprice") 33,2] Kč
+                                    .cart-aside__row 
+                                        .cart-aside__table-th Doprava a platba
+                                        .cart-aside__table-td #[span(id="delprice") 33,2] Kč
 
                                 .cart-aside__row.--main
 
