--- a/src/pug/kosik-4.pug
+++ b/src/pug/kosik-4.pug
@@ -80,98 +80,99 @@ html(lang=lang)
                                             td Celková cena s DPH
                                             td 2 354 Kč
 
+                                .cart-summary__table
+                                    table
+                                        thead 
+                                            tr 
+                                                th Osobní údaje
+                                                th
+                                        tbody 
 
-                                table.cart-summary__table
-                                    thead 
-                                        tr 
-                                            th Osobní údaje
-                                            th
-                                    tbody 
-
-                                        tr  
-                                            td Jméno
-                                            td test
-                                        tr  
-                                            td Příjmení
-                                            td test
-                                        tr  
-                                            td Telefon
-                                            td 123 456 789
-                                        tr  
-                                            td E-mail
-                                            td test@test.cz
-
-                                table.cart-summary__table
-                                    thead 
-                                        tr
-                                            th Dodací adresa
-                                            th
-                                    tbody 
-                                        
-                                        tr  
-                                            td Jméno
-                                            td test
-                                        tr  
-                                            td Příjmení
-                                            td test
-                                        tr  
-                                            td Ulice, č. p.
-                                            td test 123
-                                        tr  
-                                            td Město
-                                            td test
-                                        tr  
-                                            td PSČ
-                                            td 190 00
-
-
-                                table.cart-summary__table
-                                    thead 
-                                        tr
-                                            th Fakturační adresa
-                                            th
-                                    tbody 
-                                        
-                                        tr  
-                                            td Název firmy
-                                            td test
-                                        tr  
-                                            td IČO
-                                            td test
-                                        tr  
-                                            td DIČ
-                                            td test
-                                        tr  
-                                            td Ulice, č. p.
-                                            td test 123
-                                        tr  
-                                            td Město
-                                            td test
-                                        tr  
-                                            td PSČ
-                                            td 190 00
+                                            tr  
+                                                td Jméno
+                                                td test
+                                            tr  
+                                                td Příjmení
+                                                td test
+                                            tr  
+                                                td Telefon
+                                                td 123 456 789
+                                            tr  
+                                                td E-mail
+                                                td test@test.cz
+                                .cart-summary__table
+                                    table
+                                        thead 
+                                            tr
+                                                th Dodací adresa
+                                                th
+                                        tbody 
+                                            
+                                            tr  
+                                                td Jméno
+                                                td test
+                                            tr  
+                                                td Příjmení
+                                                td test
+                                            tr  
+                                                td Ulice, č. p.
+                                                td test 123
+                                            tr  
+                                                td Město
+                                                td test
+                                            tr  
+                                                td PSČ
+                                                td 190 00
 
 
-                                .form-group     
-                                    label(for="order-ordernum") Zákaznické číslo objednávky
-                                    input(type="text" id="order-ordernum" name="order-ordernum" required)
+                                .cart-summary__table
+                                    table
+                                        thead 
+                                            tr
+                                                th Fakturační adresa
+                                                th
+                                        tbody 
+                                            
+                                            tr  
+                                                td Název firmy
+                                                td test
+                                            tr  
+                                                td IČO
+                                                td test
+                                            tr  
+                                                td DIČ
+                                                td test
+                                            tr  
+                                                td Ulice, č. p.
+                                                td test 123
+                                            tr  
+                                                td Město
+                                                td test
+                                            tr  
+                                                td PSČ
+                                                td 190 00
 
-                                .form-group     
-                                    label(for="order-text") Poznámka k objednávce
-                                    textarea(type="text" id="order-text" name="order-text" rows="4")
+                                .cart-summary__footer
+                                    .form-group     
+                                        label(for="order-ordernum") Zákaznické číslo objednávky
+                                        input(type="text" id="order-ordernum" name="order-ordernum" required)
+
+                                    .form-group     
+                                        label(for="order-text") Poznámka k objednávce
+                                        textarea(type="text" id="order-text" name="order-text" rows="4")
 
 
-                                .form-group.--checkbox
-                                    label(for="order-agree2") Souhlasím s #[a(href="#") obchodními podmínkami]
-                                    input(type="checkbox" name="order-agree2" id="order-agree2")
+                                    .form-group.--checkbox
+                                        label(for="order-agree2") Souhlasím s #[a(href="#") obchodními podmínkami]
+                                        input(type="checkbox" name="order-agree2" id="order-agree2")
 
-                                button.btn.--cart(name="finish-order") Odeslat objednávku
+                                    button.btn.--cart(name="finish-order") Odeslat objednávku
 
-                                .cart-table__footer
-                                    a.cart-table__footer-link(href="/") 
-                                        .cart-table__footer-icon
-                                            img(src="/img/icons/cheveron.svg" alt="Krok zpět")
-                                        .cart-table__footer-text Krok zpět
+                                    .cart-table__footer
+                                        a.cart-table__footer-link(href="/") 
+                                            .cart-table__footer-icon
+                                                img(src="/img/icons/cheveron.svg" alt="Krok zpět")
+                                            .cart-table__footer-text Krok zpět
 
 
         
