--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -1,6 +1,6 @@
 .btn{
     color: $white;
-    font-size: 16px;
+    font-size: 15px;
     min-height: 54px;
     height: 100%;
     padding: 0rem 30px;
@@ -15,6 +15,7 @@
     z-index: 1;
     white-space: normal;
     transition: 0.2s ease background;
+    text-align: center;
 
     &:hover, &:active, &:focus{
         color: $white;
