--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -154,13 +154,34 @@ header{
 .header-nav{
     display: flex;
 }
+
+.header-nav__link{
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 10px 15px;
+    &:hover{
+        color: white;
+    }
+}
+.header-nav__dropdown{
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 10px 15px;
+    background: rgba($white,0.1);
+    margin: 0 10px 0 20px;
+    cursor: pointer;
+}
 .header-nav .user{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 30px 0 0;
+    margin: 0 10px 0 0;
     cursor: pointer;
     position: relative;
+    background: rgba($white,0.1);
+    min-width: 48px;
 }
 .header-nav .user.--active .user__title{
     font-weight: 500;
@@ -181,11 +202,11 @@ header{
     background: transparent;
     border-radius: 50%;
     height: 48px;
+    width: 48px;
     width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 15px;
 }
 .header-nav .user__icon img{
     height: 20px;
@@ -315,6 +336,12 @@ body.--user-active .header-nav .user__dropdown{
         box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.05);
         background: $blue-500;
     }
+    .header-nav__link{
+        display: none;
+    }
+    .header-nav__dropdown{
+        display: none;
+    }
     .header-main .container{
         padding: 0;
         height: 100%;
@@ -323,7 +350,7 @@ body.--user-active .header-nav .user__dropdown{
         margin-left: 10px;
     }
     .logo img{
-        height: 34px;
+        height: 32px;
         width: auto;
     }
     #navToggle, #searchToggle{
@@ -351,13 +378,15 @@ body.--user-active .header-nav .user__dropdown{
         width: 100%;
         max-width: 100%;
         box-shadow: 0px 10px 8px -8px rgba(0,0,0,0.05);
-        border: 10px solid $white;
-        background: $white;
-        border-top: 0;
+        border: 10px solid $blue-500;
+        background: $blue-500;
 
         .search-form{
             width: 100%;
         }
+    }
+    .search__input{
+        background-color: $white;
     }
     .header-nav {
         height: 100%;
