--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -77,7 +77,7 @@ nav .container{
 .nav-submenu__single{
     display: flex;
     flex-direction: row;
-    padding: 40px 0;
+    padding: 20px 0;
     align-items: flex-start;
 }
 .nav-submenu__single.--all{
@@ -121,6 +121,7 @@ nav .container{
         pointer-events: none;
         transition: 0.2s ease opacity;
         transition-delay: 0.2s;
+        display: none;
     }
     .nav-item.expandable:hover ~ .nav-item-backdrop{
         opacity: 1;
@@ -136,6 +137,7 @@ nav .container{
         transition: 0.2s ease opacity;
         transition-delay: 0.2s;
         box-shadow: 0px 4px 16px 0px rgba(0,0,0,.05);
+        min-height: 700px;
     }
     .nav-item.expandable:hover .nav-submenu{
         opacity: 1;
@@ -165,6 +167,7 @@ nav .container{
         overflow-x: hidden;
         overflow-y: auto;
         content-visibility: hidden;
+        max-width: 320px;
     }
     body.--nav-active{
         overflow-y: hidden;
@@ -188,6 +191,9 @@ nav .container{
         width: 100%;
         flex-grow: 1;
         justify-content: space-between;
+    }
+    .nav-linkDesktop + .nav-link img:last-child{
+    
     }
     .nav-link {
         justify-content: flex-start;
