--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -4,10 +4,11 @@
 .page.--narrow{
     width: 100%;
     max-width: 820px;
-    padding: 80px 110px 60px 110px;
+    padding: 80px 60px 60px 60px;
     border: 1px solid $gray-300;
     margin: 60px auto 40px auto;
     background: white;
+    box-shadow: 0px 3px 8px 0px rgba(0,0,0,.05);
 }
 .page.--narrow .page-heading{
     padding-top: 0;
@@ -40,9 +41,12 @@
 }
 @media screen and (max-width: 575px){
     .page.--narrow{
-        padding: 0;
+        padding-top: 0;
         border: 0;
         margin-bottom: 0;
+        padding: 0;
+        box-shadow: 0;
+        border: 0;
     }
 }
 
