--- a/src/scss/components/_product-detail.scss
+++ b/src/scss/components/_product-detail.scss
@@ -60,7 +60,8 @@
     position: relative;
     top: -50px;
     color: $gray-500;
-    left: 20px;
+    margin-left: 20px;
+    font-size: 14px;
 }
 .product-card__fav a{
     color: $gray-500;
@@ -68,6 +69,12 @@
 .product-card__fav a.--remove{
     color: $red-500;
 }
+@media screen and (max-width: 575px){
+    .product-card__fav{
+        top: -30px;
+    }
+}
+
 .product-detail__thumbWrap{
     padding: 10px;    
     width: 20%;    
@@ -110,6 +117,7 @@
     display: flex;
     align-items: center;
     gap: 15px;
+    flex-wrap: wrap;
 }
 .product-detail__code a{
     margin-left: 20px;
@@ -395,9 +403,10 @@
     }
     .product-detail__photos{
         padding: 0;
-        margin: 0 -10px;
+        margin: 0;
         display: flex;
         flex-direction: column;
+        margin-top: 10px;
 
         .product-card__tags{
             position: relative;
@@ -405,13 +414,25 @@
             order: 9;
             margin-top: 10px;
             margin-bottom: -10px;
+            left: 0;
+            top: 0;
 
             .product-card__tagSingle{
                 margin-right: 5px;
             }
         }
     }
-    
+    .product-detail__priceWh-mainline span{
+        font-size: 17px;
+    }
+    .product-detail__priceWh{
+        padding: 20px 0 0 0;
+        border: 0;
+        border-top: 1px solid #e5e5e5;
+    }
+    .product-detail__info{
+        padding-top: 30px;
+    }
     .product-detail__thumbs {
         margin: 0;
         display: none;
