--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -115,7 +115,7 @@ section h1{
     }
     section h1{
         font-size: 24px;
-        font-weight: 500;
+        font-weight: 600;
         padding-bottom: 20px;
     }
 }
@@ -271,10 +271,12 @@ section.products{
     line-height: 1.3;
 }
 .splashscreen-item-text small{
-    font-size: 14px;
+    font-size: 13px;
     color: $gray-500;
     display: flex;
     gap: 20px;
+    flex-wrap: wrap;
+    padding-top: 2px;
 }
 .splashscreen-item-text small b{
     font-weight: 400;
@@ -288,3 +290,315 @@ section.products{
 }
 
 
+.user-info-section{
+    padding-bottom: 60px;
+}
+.user-info-section:first-child{
+    margin-top: 40px;
+}
+.user-info-section:last-child{
+    padding-bottom: 0px;
+}
+.user-info-section h3{
+    font-size: 18px;
+    border-bottom: 1px solid $gray-300;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+.user-info-usergrid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 15px;
+}
+.usergrid-item{
+    border: 1px solid #e5e5e5;
+    display: flex;
+    padding: 12px 15px;
+    gap: 15px;
+    transition: .3s ease box-shadow;
+    align-items: center;
+}
+.usergrid-item-img{
+    background: #f5f5f7;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    height: 46px;
+    width: 46px;
+}
+.usergrid-item-img img{
+
+}
+.usergrid-item-text span{
+    color: #222427;
+    text-transform: uppercase;
+    font-weight: 500;
+    line-height: 1.3;
+}
+.usergrid-item-text small{
+    font-size: 14px;
+    color: #6e6e6e;
+    display: flex;
+    gap: 20px;
+}
+
+.user-info-table{
+
+}
+.user-info-table table{
+    width: 100%;
+    margin-bottom: 0;
+}
+.user-info-table table td{
+    border: 0;
+    padding: 5px 0;
+}
+.user-info-table table td:last-child{
+    text-align: right;
+}
+.user-info-section .form-group.--inline{
+    margin: 0;
+}
+.user-info-section .form-group.--inline select{
+    width: 100%;
+    height: 48px;
+}
+.user-info-section .form-group.--inline + .user-info-table{
+    margin-top: 20px;
+}
+.user-info-section .btn.btn-secondary{
+    padding: 0 15px;
+    font-size: 15px;
+    flex-shrink: 0;
+}
+.tab{
+    display: flex;
+}
+.tablinks{
+    border: 0;
+    background: transparent;
+    padding: 12px 20px;
+    text-transform: uppercase;
+}
+.tablinks.active{
+    background: rgba($green-500,0.1);
+    color: $green-500;
+    border-bottom: 2px solid $green-500;
+}
+.tabcontent{
+    border: 1px solid $gray-300;
+    margin-top: -1px;
+}
+.user-files-table{
+    padding: 30px 20px;
+    overflow: auto;
+}
+
+.user-files-table table{
+    margin: 0;
+    width: 100%;
+    font-size: 14px;
+}
+.user-files-table table th{
+    color: $gray-500;
+    border: 0;
+    padding: 10px;
+    font-weight: 400;
+}
+.user-files-table table td{
+    padding: 8px 10px;
+    border: 0;
+    color: $gray-900;
+}
+.user-files-table table tr:nth-child(even) td{
+    background: $gray-100;
+}
+.user-files-table table td.--bold{
+    font-weight: 600;
+}
+.user-files-table table td.--red{
+    color: $red-500;
+    font-weight: 600;
+}
+.user-files-table-footer{
+    background: $gray-100;
+    padding: 30px;
+    display: flex;
+    justify-content: flex-end;
+    gap: 40px;
+    font-size: 18px;
+
+    span{
+        display: flex;
+        align-items: baseline;
+        gap: 10px;
+    }
+}
+.user-files-table-footer strong{
+    font-weight: 600;
+    margin: 0;
+}
+.user-files-table-footer span:last-child strong{
+    color: $red-500;
+}
+
+
+
+.product-history{
+
+}
+.product-history__item{
+    margin-bottom: 40px;
+}
+.product-history__item:last-child{
+    margin: 0;
+}
+.product-history__heading{
+    display: flex;
+    background: $gray-100;
+    padding: 12px 15px;
+    flex-direction: column;
+}
+.product-history__heading h5{
+    font-size: 15px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    line-height: 1.5;
+}
+.product-history__heading h5 span{
+    font-weight: 400;
+    color: $gray-500;
+}
+.product-history__heading p{
+    margin: 0;
+    font-size: 14px;
+}
+
+.product-history__product{
+    display: flex;
+    gap: 15px;
+    padding: 20px 0;
+    align-items: center;
+    border-bottom: 1px solid $gray-300;
+}
+.product-history__qty{
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.product-history__product img{
+    height: 60px;
+    width: 60px;
+}
+.product-history__name{
+    display: flex;
+    flex-direction: column;
+    font-weight: 500;
+    flex-grow: 1;
+}
+.product-history__name span:last-child{
+    font-size: 13px;
+    font-weight: 400;
+    color: $gray-500;
+}
+.product-history__btn{
+    padding: 0 15px;
+    font-size: 14px;
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.notice{
+     margin: 0;
+}
+
+
+.cart-aside__item{
+    display: flex;
+    gap: 15px;
+    padding: 20px 0;
+    border-bottom: 1px solid $gray-300;
+}
+.cart-aside__item-img{
+    height: 60px;
+    width: 60px;
+    background: $gray-100;
+    flex-shrink: 0;
+}
+.cart-aside__item-img img{
+    mix-blend-mode: multiply;
+}
+.cart-aside__item-content{
+    display: flex;
+    flex-direction: column;
+}
+.cart-aside__item-name{
+    line-height: 1.3;
+    padding-bottom: 5px;
+}
+.cart-aside__item-prices{
+    display: flex;
+    justify-content: space-between;
+}
+.cart-aside__item-prices span{
+    font-size: 14px;
+}
+.cart-aside__item-prices span:last-child{
+    font-weight: 500;
+}
+.cart-aside__weight{
+    padding: 15px 0;
+    border-bottom: 1px solid $gray-300;
+}
+.cart-aside__delivery{
+    padding-top: 20px;
+}
+
+.cart-table-address{
+    width: 100%;
+}
+.cart-table-address table{
+    width: 100%;
+}
+.cart-table-address td{
+    padding: 5px 0;
+}
+.cart-table-address td:first-child{
+    color: $gray-500;
+}
+.cart-table-address td:last-child{
+    text-align: right;
+}
+.cart-table-personal .form-group.--inline{
+    max-width: 100%;
+}
+.cart-table-personal .form-group.--inline select{
+    width: 100%;
+}
+.cart-table-personal .form-group.--inline .btn{
+    white-space: nowrap;
+
+}
+.cart-table-personal{
+    padding: 30px 0;
+    border: 0;
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+}
+
+.form-group.--radiogroup{
+    margin-bottom: 10px;
+}
+.form-group.--radiogroup p{
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.form-group.--radiogroup span{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.form-group.--radiogroup label{
+    padding: 0;
+}
