--- a/src/pug/produkt-detail-wholesale.pug
+++ b/src/pug/produkt-detail-wholesale.pug
@@ -129,51 +129,60 @@ html(lang=lang)
                                             .product-detail__button 
                                                 button.btn.--green(name="add-to-cart") #[img(src="/img/icons/cart-white.svg" alt="Vložit do košíku")] Vložit do košíku
 
+                        .tab.product-detail__tab
+                            button.tablinks.active(onclick="openCity(event, '1')") Popis a Parametry
+                            button.tablinks(onclick="openCity(event, '2')") Dokumenty k produktu
 
-                            .col-12.col-lg-7
-                                .product-detail__description(id="productDescription")
-                                    h2 Popis produktu
-                                    p Nabízíme náš dřevěný CARMEN VI BOX / KONTEJNER - přírodní, ekologický kontejner. Výsuvný box na dvě vína z přírodního dřeva s rukojetí - rukojetí z přírodního tlustého lana, která je praktická a snadno přepravitelná.
 
-                                    p Přírodní odstín. Perfektní předmět pro jedinečný dárek, zajímavý dekorativní motiv - vnese do vašeho domova přirozený ekologický nádech.
+                        .tabcontent.product-detail__tabcontent(id="1" style="display: block;")
 
-                                    p Na přání je možné dokoupit dřevěnou vlnu (hobliny) a rytinu.
+                            .row
+                                .col-12.col-lg-7
+                                    .product-detail__description(id="productDescription")
+                                        h2 Popis produktu
+                                        p Nabízíme náš dřevěný CARMEN VI BOX / KONTEJNER - přírodní, ekologický kontejner. Výsuvný box na dvě vína z přírodního dřeva s rukojetí - rukojetí z přírodního tlustého lana, která je praktická a snadno přepravitelná.
 
-                            .col-12.col-lg-1
+                                        p Přírodní odstín. Perfektní předmět pro jedinečný dárek, zajímavý dekorativní motiv - vnese do vašeho domova přirozený ekologický nádech.
 
-                            .col-12.col-lg-4
-                                .product-detail__parameters
-                                    h2 Parametry
-                                    table  
-                                        tbody 
-                                            tr
-                                                td Šířka
-                                                td 15cm
-                                            tr
-                                                td Výška
-                                                td 150cm
-                                            tr
-                                                td Hloubka
-                                                td Lorem ipsum dolore
+                                        p Na přání je možné dokoupit dřevěnou vlnu (hobliny) a rytinu.
+
+                                .col-12.col-lg-1
+
+                                .col-12.col-lg-4
+                                    .product-detail__parameters
+                                        h2 Parametry
+                                        table  
+                                            tbody 
+                                                tr
+                                                    td Šířka
+                                                    td 15cm
+                                                tr
+                                                    td Výška
+                                                    td 150cm
+                                                tr
+                                                    td Hloubka
+                                                    td Lorem ipsum dolore
+
+
+
+                        .tabcontent.product-detail__tabcontent(id="2" style="display: none;")
+                            .product-detail__files
+                                a(href="#") soubor.pdf
+                                a(href="#") soubor.pdf
+                                a(href="#") soubor.pdf
+                                a(href="#") soubor.pdf
 
 
 
                 section.products
                     .container  
-                        h1 Příslušenství
+                        h1 Obdobné produkty
                         .products-grid
                             include components/_product-card.pug
                             include components/_product-card.pug
                             include components/_product-card.pug
                             include components/_product-card.pug
-                section.products
-                    .container  
-                        h1 Související
-                        .products-grid
-                            include components/_product-card.pug
-                            include components/_product-card.pug
-                            include components/_product-card.pug
-                            include components/_product-card.pug
+
 
 
         include components/_footer.pug
